--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.scss
@@ -57,6 +57,9 @@ mbsc-listview {
       .mbsc-grid {
         .mbsc-row {
           margin-bottom: 0.5em;
+          .mbsc-smaller {
+            font-size: 12px;
+          }
           &:nth-of-type(n+2) {
             .mbsc-col-sm-auto {
               display: flex;
