--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.scss
@@ -57,7 +57,8 @@ mbsc-listview {
       .mbsc-grid {
         .mbsc-row {
           margin-bottom: 0.5em;
-          .mbsc-smaller {
+          .secondary-info {
+            padding-left: 1.4em;
             font-size: 12px;
           }
           &:nth-of-type(n+2) {
