#77771 - activate extended case in SelfserviceOpen

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -59,7 +59,8 @@
         caseId: Number('@Model.CaseId'),
         logFileKey: '@Model.LogFileGuid',
         isFinished : @Html.Raw(Model.CaseDataModel.IsFinished ? "true" : "false"),
-        logNotesMode: Number('@(Model.ApplicationType == ApplicationType.LineManager || Model.ShowCommunicationForSelfservice ? 1 : 0)')
+        logNotesMode: Number('@(Model.ApplicationType == ApplicationType.LineManager || Model.ShowCommunicationForSelfservice ? 1 : 0)'),
+        caseEmailGuid : '@(ViewBag.caseEmailGuid ?? "")'
     };
 
     window.parameters = {
