#76935  Remove Inactive customers from the list

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Profile/EditorTemplates/UserProfileCustomerSettings.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Profile/EditorTemplates/UserProfileCustomerSettings.cshtml
@@ -1,11 +1,13 @@
 ﻿@model DH.Helpdesk.BusinessData.Models.Users.UserProfileCustomerSettings
-
-<tr>
-    <td>
-        @Html.HiddenFor(m => m.CustomerId)
-        @Html.CheckBoxFor(m => m.ShowOnStartPage)
-    </td>
-    <td>
-        @Html.DisplayFor(m => m.CustomerName)
-    </td>
-</tr>
+@if(Model.Active)
+{
+    <tr>
+        <td>
+            @Html.HiddenFor(m => m.CustomerId)
+            @Html.CheckBoxFor(m => m.ShowOnStartPage)
+        </td>
+        <td>
+            @Html.DisplayFor(m => m.CustomerName)
+        </td>
+    </tr>
+}
