#76592 Improvements Widget Statistics, Fix text and text translation

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/StatisticsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/StatisticsInfo.cshtml
@@ -30,7 +30,7 @@
                                 <td>@Translation.Get("Nya idag")</td>
                                 <td>@Translation.Get("Förfaller idag")</td>
                                 <td>@Translation.Get("Lösta idag")</td>
-                                <td>@Translation.Get("Lösta i tid")</td>
+                                <td>@Translation.Get("Lösta i tid idag")</td>
                             </tr>
                             <tr>
                                 <td id="st_newToday"><i class="gif-loader" style="">&nbsp;</i></td>
