#77420 - updated zoom behavior for images

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/file-preview/file-preview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/file-preview/file-preview.component.html
@@ -8,7 +8,7 @@
  
   <!-- Images-->
   <ng-container *ngSwitchCase="contentTypes.Image">
-      <image-file-viewer [fileData]="fileData" [fileName]="fileName"></image-file-viewer>
+      <image-file-viewer [fileData]="fileData" [fileName]="fileName" [height]="previewHeight"></image-file-viewer>
   </ng-container>
 
   <!-- text, html -->
