#78738 - Error when save user in Profile

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Profile/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Profile/_Input.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="tab-pane tab-pane-border" id="fragment-3">
                 <div class="container" id="subTabContainer3">
-                    @Html.Partial("CustomersSettings", Model.CustomersSettings); 
+                    @Html.Partial("CustomersSettings", Model.CustomersSettings) 
                 </div>
             </div>
         </div>
