--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Profile/EditorTemplates/UserProfileCustomerSettings.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Profile/EditorTemplates/UserProfileCustomerSettings.cshtml
@@ -1,13 +1,12 @@
 ﻿@model DH.Helpdesk.BusinessData.Models.Users.UserProfileCustomerSettings
-@if(Model.Active)
-{
-    <tr>
-        <td>
-            @Html.HiddenFor(m => m.CustomerId)
-            @Html.CheckBoxFor(m => m.ShowOnStartPage)
-        </td>
-        <td>
-            @Html.DisplayFor(m => m.CustomerName)
-        </td>
-    </tr>
-}
+<tr>
+    <td>
+        @Html.HiddenFor(m => m.CustomerId)
+        @Html.HiddenFor(m => m.CustomerName)
+        @Html.HiddenFor(m => m.Active)
+        @Html.CheckBoxFor(m => m.ShowOnStartPage)
+    </td>
+    <td>
+        @Html.DisplayFor(m => m.CustomerName)
+    </td>
+</tr>
