#78840 - temporary removed time left sorting for multi customers

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
@@ -23,7 +23,7 @@
                   <ng-container *ngIf="caseSortFields && caseSortFields.length">
                       <cases-sort-menu [selectedSortField]="selectedSortFieldId" 
                         [selectedSortFieldOrder]="selectedSortFieldOrder" 
-                        [sortFields]="caseSortFields"
+                        [sortFields]="caseSortFieldsFiltered"
                         (sortingChanged)="processSortingChanged($event)"></cases-sort-menu>
                   </ng-container>
                 </div>
