--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -19,7 +19,7 @@
     var extendedFormId = Model.ExtendedCaseDataModel.ExtendedCaseFormId;
     /*Debug mode*/
     //Model.ExtendedCaseDataModel.FormModel.Path =
-    //    "http://dhhelpdesk-ikea-bschr-v5-ec.datahalland.se/ExtendedCase/?formId=" + extendedFormId + "&autoLoad=1";
+    //   "http://localhost:8099/ExtendedCase/?formId=" + extendedFormId + "&autoLoad=1";
 
     var downloadCaseFileUrl = Url.Action("DownloadNewCaseFile", "CaseFiles");
     var downloadCaseFileParamUrl = (!string.IsNullOrEmpty(Model.CaseDataModel.CaseFileKey) ? "id=" + Model.CaseDataModel.CaseFileKey + "&" : string.Empty);
@@ -103,7 +103,8 @@
             SourceId: "CaseDataModel_RegistrationSourceCustomer_Id",
             log_InternalText: "CaseDataModel_Text_Internal",
             CostCentre: "CaseDataModel_CostCentre",
-            Caption: "CaseDataModel_Caption"
+            Caption: "CaseDataModel_Caption",
+            InventoryLocation: "CaseDataModel_InventoryLocation",
         },
 
         caseInitValues: {
@@ -128,6 +129,7 @@
             PersonsCellphone: @Html.Raw(Json.Encode(Model.CaseDataModel.PersonsCellphone)),
             Place: @Html.Raw(Json.Encode(Model.CaseDataModel.Place)),
             CostCentre: '@Model.CaseDataModel.CostCentre',
+            InventoryLocation: @Html.Raw(Json.Encode(Model.CaseDataModel.InventoryLocation)), 
         },
 
         extendedCaseGuid: '@(Model.ExtendedCaseDataModel.ExtendedCaseGuid)',
